--- a/templates/juju-client-container.yaml
+++ b/templates/juju-client-container.yaml
@@ -1,3 +1,4 @@
+# templates/deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,13 +15,14 @@ spec:
       labels:
         {{- include "juju-client.labels" . | nindent 8 }}
     spec:
+      serviceAccountName: {{ include "juju-client.fullname" . }}-sa  # Reference the ServiceAccount
       containers:
       - name: main
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         command: {{ toJson .Values.command }}
         lifecycle:
-          postStart:
+          postStart: #Download and install kubectl and juju into container
             exec:
               command:
                 - "/bin/sh"
@@ -33,6 +35,13 @@ spec:
                   chmod +x /usr/local/sbin/juju /usr/local/sbin/kubectl
         resources:
           {{- toYaml .Values.resources | nindent 12 }}
+        volumeMounts:
+        - name: juju-client-vol  # Mount the PVC
+          mountPath: /data
+      volumes:
+      - name: juju-client-vol
+        persistentVolumeClaim:
+          claimName: {{ include "juju-client.fullname" . }}-pvc  # Reference the PVC
       nodeSelector:
         {{- toYaml .Values.nodeSelector | nindent 8 }}
       tolerations:
