--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -5,4 +5,4 @@ metadata:
   name: {{ include "juju-client.fullname" . }}-sa
   namespace: {{ .Release.Namespace }}
 secrets:
-- name: juju-client-secret
+- name: juju-client-secret #link the secret to SA
